--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,3 +1,13 @@
+h1, h2, h3, p {
+  margin: 0;
+}
+
+button {
+  border: 0 none;
+  outline: none;
+  cursor: pointer;
+}
+
 img {
   /* fix image floating */
   vertical-align: bottom;
