--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,13 +1,17 @@
-h1, h2, h3, p {
+h1, h2, h3, p, hr {
   margin: 0;
 }
-
-button {
+button, hr {
   border: 0 none;
+}
+button {
   outline: none;
   cursor: pointer;
 }
-
+a {
+  text-decoration: none;
+  font-weight: 400;
+}
 img {
   /* fix image floating */
   vertical-align: bottom;
