refactor: 💡 move default properties from Img to global.css

--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -16,4 +16,8 @@ a {
 img {
   /* fix image floating */
   vertical-align: bottom;
+  width: auto;
+  height: auto;
+  max-width: 100%;
+  max-height: 100%;
 }
