--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -13,11 +13,13 @@ a {
   text-decoration: none;
   font-weight: 400;
 }
+img, iframe {
+  max-width: 100%;
+  max-height: 100%;
+}
 img {
   /* fix image floating */
   vertical-align: bottom;
   width: auto;
   height: auto;
-  max-width: 100%;
-  max-height: 100%;
 }
