--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -21,10 +21,10 @@ a {
 img, iframe {
   max-width: 100%;
   max-height: 100%;
+  /* fix a gap under inline elements */
+  vertical-align: bottom;
 }
 img {
-  /* fix image floating */
-  vertical-align: bottom;
   width: auto;
   height: auto;
 }
